# django-atlassian

./: .env  .env.local  .env.prod  .env.stage  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  README.rst  deploye_20220707.info  django_atlassian  docker-compose-local.yaml  docker-compose-prod.yaml  docker-compose-stage.yaml  docker-compose.yaml  ecs-params-release.yaml  ecs-params-stage.yaml  ecs-params.yml  ecs_task_definition_atlassianaddon_release.json  ecs_task_definition_atlassianaddon_stage.json  manage.py  pyproject.toml  requirements.txt  setup.py  web.env
atlassian/: README.md  admin.py  apps.py  confluence_urls.py  confluence_views.py  decorators.py  forms.py  jira_urls.py  jira_views.py  managers.py  models.py  proxy_api.py  router.py  urls.py  views.py
atlassian_addon/: atlassian_urls.py  celeryapp.py  urls.py  wsgi.py
confluence/: apps.py  urls.py  views.py
customers/: apps.py  proxy_api.py  urls.py  views.py
django-atlassian/: views.py
django_atlassian/: addon.py  apps.py  decorators.py  middleware.py  router.py  urls.py  views.py
feedback/: apps.py
fluendo/: jira_modules.py  proxy_api.py  urls.py  views.py  wsgi.ini
helloworld/: confluence_modules.py  views.py
jira_addon/: atlassian_urls.py  settings.py  urls.py  wsgi.ini  wsgi.py
metabase/: jira_modules.py  models.py  urls.py  views.py
nginx/: fluendo.conf
sales/: apps.py  forms.py  urls.py  views.py
src/: manage.py
supervisor/: app.conf  app.sh  atlassian-addon-prod.conf  celery-prod.conf  celery-prod.sh  celery.sh  run-dev.sh  (+1 more)
(+170 files in other folders)
